# Encoder

./: .gitignore  Cargo.toml  INSTALL.md  install-context-menu.reg  uninstall-context-menu.reg
.claude/: settings.local.json
config/: defaults.toml  peach_credentials.example.toml
config/SIPOLATTI/: defaults.toml
config/_EXEMPLO/: defaults.toml
scripts/: peach_test.py
src/: config.rs  encoder.rs  error.rs  lib.rs  log.rs  metadata.rs  slate.rs
src/peach/: auth.rs  config.rs  drive.rs  mod.rs  send.rs  status.rs  upload.rs
